fix long text overflowing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,7 @@
+* {
+    overflow-wrap: break-word;
+}
+
 aside.wrapper__sidebar {
     display: none;
 }
